--- a/basic-encrypt-data/basic-encrypt-data.csproj
+++ b/basic-encrypt-data/basic-encrypt-data.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>basic_encrypt_data</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Security.Cryptography.ProtectedData" Version="4.5.0" />
+  </ItemGroup>
+
 </Project>
